Fri May 27 15:30:21 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/ImplRepo_Service/Activator_NT_Service.h:
        * orbsvcs/ImplRepo_Service/Locator_NT_Service.h:
        * tao/TypeCode_Base_Attributes.h:
        * tao/TypeCode_Case.h:
        * tao/TypeCode_Case_T.h:
        * tao/TypeCode_Struct_Field.h:
        * tao/TypeCode_Value_Field.h:
        * utils/wxNamingViewer/pch.h:

          These files #included config.h which isn't safe, because
        it won't necessarilly pick up the correct symbols. For example, I
        caught this by trying to build ACE on Windows with __ACE_INLINE__ = 0.
        The files that #included config.h directly saw that it was defined as 0, but
        changing them to #include config-all.h instead, correctly saw that
        the symbol was undefined.

Fri May 27 13:12:10 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tests/Any/Recursive/Test.idl:

          Added new user exception to be used when reporting Any
          demarshaling errors.

        * tests/Any/Recursive/client.cpp:

          Fixed unused argument warnings.

          Use the new user exception when report Any demarshaling
          failures, instead of CORBA::INV_OBJREF.

Fri May 27 08:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Default_Servant/Default_Servant.cpp:
          Slightly modified this test to test reference_to_servant with
          reference counting

        * tests/POA/Deactivate_Object/server.cpp:
          Added a call to reference_to_servant. This as a regression for
          a bug where we didn't increment the reference count on the
          servant before returning it.

        * tao/PortableServer/Root_POA.cpp (reference_to_servant_i):
          Increment the reference count on the servant before returning it.
          Thanks to Konstantinos Lykiardopoulos <klyk at intracom dot gr>
          and  Lothar Werzinger <lothar at xcerla dot com> for reporting